--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,24 +1,33 @@
-<ngx-combobox
-  [dataList]="dataList"
-  [key]="'id'"
-  [propertiesReturn]="propertiesReturn"
-  (returnValue)="print($event)"
-  [namesValue]="namesValue"
-  placeholder="Buscar"
-  [limit]="50"
-  [required]="true"
-  [requiredMessage]="'Campo requerido'"
-  [containerClassList]="['cssClass1']"
-  [inputClassList]="['cssClass2']"
-  [selectClassList]="['cssClass3']"
-  [optionClassList]="['cssClass4']"
-  [spanClassList]="['cssClass5']"
-></ngx-combobox>
-<!--una pagina ejemplo cualqueira-->
-<div>
-  <h1>Hola esto es un texto</h1>
-  <h1>Hola esto es un texto</h1>
-  <h1>Hola esto es un texto</h1>
-  <h1>Hola esto es un texto</h1>
-  <h1>Hola esto es un texto</h1>
-</div>
+<form [formGroup]="currentForm">
+  <ngx-combobox
+    [dataList]="dataList"
+    [key]="'id'"
+    [propertiesReturn]="propertiesReturn"
+    (returnValue)="print($event)"
+    [namesValue]="namesValue"
+    placeholder="Buscar"
+    [limit]="50"
+    [required]="true"
+    [requiredMessage]="'Campo requerido'"
+    [containerClassList]="['cssClass1']"
+    [inputClassList]="['cssClass2']"
+    [selectClassList]="['cssClass3']"
+    [optionClassList]="['cssClass4']"
+    [spanClassList]="['cssClass5']"
+    [defaultSelected]="2"
+    [disabled]="false"
+    formControlName="inputText"
+  ></ngx-combobox>
+  <!--una pagina ejemplo cualqueira-->
+  <div>
+    <h1>Hola esto es un texto</h1>
+    <h2>Retorno</h2>
+    <p>
+      <code>{{ returnProperties | json }}</code>
+    </p>
+    <h2>Formulario</h2>
+    <p>
+      <code>{{ currentForm.value | json }}</code>
+    </p>
+  </div>
+</form>
